plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.dfparty'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-integration'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    
    // HTML 파싱을 위한 Jsoup 추가
    implementation 'org.jsoup:jsoup:1.17.2'
    
    // Playwright for JavaScript rendering (Chromium only)
    implementation 'com.microsoft.playwright:playwright:1.53.0'
    
    // Jackson JSR310 모듈 추가 (LocalDateTime 직렬화 지원)
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'mysql:mysql-connector-java:8.0.33'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

import org.springframework.boot.gradle.tasks.bundling.BootJar

tasks.named('bootJar', BootJar) {
    // Playwright 드라이버 번들을 컨테이너 런타임에서 미리 풀도록 지정 (ZipException 회피)
    requiresUnpack '**/driver-bundle-*.jar'
}

tasks.named('test') {
    useJUnitPlatform()
} 